IGNITE-14645 add polymorphicSchemaExtensions for ConfigurationManager