@@ -153,6 +153,7 @@ public class IgniteImpl implements Ignite {
             ),
             Map.of(),
             new LocalConfigurationStorage(vaultMgr),
+            List.of(),
             List.of()
         );
 
@@ -184,7 +185,8 @@ public class IgniteImpl implements Ignite {
             ),
             Map.of(),
             new DistributedConfigurationStorage(metaStorageMgr, vaultMgr),
-            Collections.singletonList(ExtendedTableConfigurationSchema.class)
+            Collections.singletonList(ExtendedTableConfigurationSchema.class),
+            List.of()
         );
 
         baselineMgr = new BaselineManager(
